Search distance matrix REST API
