# src/schema_generator.rs
@@ -1,6 +1,8 @@
 use api::grpc::models::{CollectionsResponse, VersionInfo};
 use api::rest::{
     QueryGroupsRequest, QueryRequest, QueryRequestBatch, QueryResponse, Record, ScoredPoint,
+    SearchMatrixOffsetsResponse, SearchMatrixPairsResponse, SearchMatrixRequest,
+    SearchMatrixRowsResponse,
 };
 use collection::operations::cluster_ops::ClusterOperations;
 use collection::operations::consistency_params::ReadConsistency;
@@ -87,6 +89,10 @@ struct AllDefinitions {
     bf: QueryRequestBatch,
     bg: QueryResponse,
     bh: QueryGroupsRequest,
+    bi: SearchMatrixRequest,
+    bj: SearchMatrixOffsetsResponse,
+    bk: SearchMatrixPairsResponse,
+    bl: SearchMatrixRowsResponse,
 }
 
 fn save_schema<T: JsonSchema>() {
